fix navbar position on mobile & some layout fixes in main & add contact btn on home

--- a/src/components/Styles/Home.scss
+++ b/src/components/Styles/Home.scss
@@ -35,38 +35,29 @@
         animation: fadeInUp 1.5s 2s forwards;
     }
 
-    .box-btn{
+    .box-btn {
+        opacity: 0;
+        animation: fadeInUp 1.5s 2.5s forwards;     
 
-        button {
-            opacity: 0;
-            animation: fadeInUp 1.5s 2s forwards;
-            background-color: transparent;
-            height: 40px;
-            width: 160px;
-            border: 1px solid $primary-color;
-            padding: 0px;
-            border-radius: 50px;
-
-            &:hover {
-                background-color: $primary-color;
-            }
-        }
-
-        a {
+        .contact-btn {
+            display: inline-block;
+            white-space: nowrap;
             text-decoration: none;
             color: $primary-color;
             letter-spacing: 3px;
             font-weight: 500;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
+            border: 5px outset $primary-color;
+            border-radius: 20px;
+            padding: 10px 18px;
+            transition: all 0.15s ease-in-out ;
+            box-shadow: 1px 2px 2px $dark;
 
-            &:hover {
-                color: $dark;
+                &:hover {
+                    color: $dark;
+                    background-color: $primary-color;
+                }
             }
-        }
+        
     }
 
     .box-effect {
@@ -75,6 +66,11 @@
         min-width: 200px;
         height: 375px;
         background-color: #fff;
+        transition: transform 0.3s;
+
+        &:hover {
+            transform: scale(1.05);
+        }
     }
 }
 
@@ -114,6 +110,7 @@
        
         .box-btn {
             width: 100%;
+            margin: 10px 0px 20px 0px;
         }
 
         .box-effect {
