--- a/src/components/Styles/Navbar.scss
+++ b/src/components/Styles/Navbar.scss
@@ -111,7 +111,8 @@ $logo-height: 10%;
         height: 60px;
         width: 100%;
         flex-direction: row;
-        position: sticky;
+        top: 0px;
+        z-index: 4;
 
         .box-logo {
             gap: $logo-height * 0.15;
